--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -626,10 +626,7 @@ section.page_column_main {
         margin-right: 15px;
     }
     
-    h1 {
-        font-family: $font_page_title;
-        font-size: $font_size_page_title;
-    }
+    @include common_heading;
     
     p {
         font-family: $font_page_text;
@@ -764,77 +761,8 @@ section.post_column_main {
             color: $color_text;
         }
     }
-
-    h1 { font-size: $font_size_page_title;     line-height: $font_line_height_page_title;     }
-    h2 { font-size: $font_size_page_title - 2; line-height: $font_line_height_page_title - 2; }
-    h3 { font-size: $font_size_page_title - 4; line-height: $font_line_height_page_title - 2; }
-    h4 { font-size: $font_size_page_title - 6; line-height: $font_line_height_page_title - 2; }
-    h5 { font-size: $font_size_page_title - 7; line-height: $font_line_height_page_title - 2; }
-    h6 { font-size: $font_size_page_title - 9; line-height: $font_line_height_page_title - 2; }
-
-    h1 code { font-size: $font_size_page_title - 0; }
-    h2 code { font-size: $font_size_page_title - 5; }
-    h3 code { font-size: $font_size_page_title - 6; }
-    h4 code { font-size: $font_size_page_title - 8; }
-    h5 code { font-size: $font_size_page_title - 10; }
-    h6 code { font-size: $font_size_page_title - 11; }
     
-    @include max-screen(720px) {
-        h1 { font-size: $font_size_page_title - 4; line-height: $font_line_height_page_title;     }
-        h2 { font-size: $font_size_page_title - 5; line-height: $font_line_height_page_title - 2; }
-        h3 { font-size: $font_size_page_title - 6; line-height: $font_line_height_page_title - 2; }
-        h4 { font-size: $font_size_page_title - 7; line-height: $font_line_height_page_title - 2; }
-        h5 { font-size: $font_size_page_title - 8; line-height: $font_line_height_page_title - 2; }
-        h6 { font-size: $font_size_page_title - 9; line-height: $font_line_height_page_title - 2; }
-        
-        h1 code { font-size: $font_size_page_title - 4; }
-        h2 code { font-size: $font_size_page_title - 5; }
-        h3 code { font-size: $font_size_page_title - 6; }
-        h4 code { font-size: $font_size_page_title - 7; }
-        h5 code { font-size: $font_size_page_title - 8; }
-        h6 code { font-size: $font_size_page_title - 9; }
-    }
-
-    h1, h2, h3, h4, h5, h6 {
-        font-family: $font_page_title;
-        font-weight: bold;
-        color: $color_heading_text;
-        margin-bottom: 13px;
-        code {
-            color: $color_heading_text;
-        }
-    }
-    h1 {
-        margin-top: 0px;
-        padding-top: 0px;
-    }
-    h2, h3, h4 {
-        margin-top: 10px;
-        padding-top: 20px;
-    }
-    h5, h6 {
-        margin-top: 0px;
-        margin-bottom: 10px;
-        padding-top: 10px;
-        // For bread crumbs
-        a {
-            font-family: $font_heading;
-            font-size: $font_size_default;
-            font-weight: normal;
-            color: $color_primary;
-            border-bottom: none;
-        }
-        &.bread_crumb {
-            font-style: normal;
-            line-height: 22px;
-        }
-    }
-    h5 {
-        font-style: italic;
-    }
-    h6 {
-        font-style: normal;
-    }
+    @include common_heading;
 
     p, li, dl {
         font-family: $font_page_text;
