--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
     <div id="footer_content">
 
         <div id="footer_column_one" class="license">
-            <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Except where otherwise noted, the <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" rel="dct:type">content</span> on this site (<span class='plain_color highlight_cc'><a xmlns:cc="http://creativecommons.org/ns#" href="http://dutertetimes.github.io/" property="cc:attributionName" rel="cc:attributionURL">Duterte Times</a></span>) is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a> (<span class='highlight_cc'>CC BY-SA</span>). You are free to copy reproduce, distribute, display, and make adaptations but you must provide proper attribution.</p>
+            <p><a rel="license" href="{{ site.data.links.cc_by_sa }}" target="_blank"><img alt="Creative Commons License" style="border-width:0" src="{{ site.data.links.cc_by_sa_image }}" /></a><br />Except where otherwise noted, the <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" rel="dct:type">content</span> on this site (<span class='plain_color highlight_cc'><a xmlns:cc="http://creativecommons.org/ns#" href="http://dutertetimes.github.io/" property="cc:attributionName" rel="cc:attributionURL">Duterte Times</a></span>) is licensed under a <a rel="license" href="{{ site.data.links.cc_by_sa_license }}" target="_blank">Creative Commons Attribution-ShareAlike 4.0 International License</a> (<span class='highlight_cc'>CC BY-SA</span>). You are free to copy reproduce, distribute, display, and make adaptations but you must provide proper attribution.</p>
             <p>
-                Visit the <a href="https://creativecommons.org/">Creative Commons</a> website.<br/>
-                Read about <a href="">proper attribution</a>.
+                Visit the <a href="{{ site.data.links.creative_commons }}" target="_blank">Creative Commons</a> website.<br/>
+                Read about <a href="{{ site.data.links.attribution }}" target="_blank">proper attribution</a>.
             </p>
         </div>
 
