--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,9 +35,11 @@
     <!-- Javascript -->
     <!------------------------------------------------------------------------>
     <!-- Originally jquery is version 1.7.1 -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
     <!-- For search.json -->
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <!-- <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
+    
     <script src="{{ site.baseurl }}/javascripts/respond.js"></script>
     <script src="{{ site.baseurl }}/javascripts/moment.js"></script>
     
