--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -345,7 +345,7 @@ main {
     
     @include min-screen(721px) {
         float: clear;
-        padding-top: 120px;
+        padding-top: 110px;
     }
 }
 
@@ -359,13 +359,16 @@ section {
     &.column_left_sidebar,
     &.hub_column_main,
     &.post_column_main,
+    &.page_column_main,
     &.column_right_sidebar {
         float: left;
         font-family: $font_default;
-        margin-top: 0px;
-        margin-left: 15px;
-        margin-right: 15px;
-        margin-bottom: 15px;
+        margin: 0px 15px 15px 15px;
+    }
+    &.hub_column_main,
+    &.post_column_main,
+    &.page_column_main {
+        margin-top: 5px;
     }
 }
 
