Compact display of current date/time

--- a/_includes/datetime.html
+++ b/_includes/datetime.html
@@ -30,8 +30,7 @@
     
     <div>
         <p>
-            <span id="day_local"></span>&nbsp;&nbsp;
-            <span id="date_local"></span>&nbsp;&nbsp;
+            <span id="day_local"></span>&nbsp;<span id="date_local"></span>&nbsp;&nbsp;
             <span id="datetime_local"></span>
         </p>
     </div>
