--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -275,8 +275,9 @@ header {
             p {
                 float: left;
                 font-family: $font_title_tagline;
-                font-weight: normal;
+                font-weight: bold;
                 font-size: $font_size_title_tagline;
+                font-style: italic;
                 letter-spacing: 0px;
                 text-align: left;
                 line-height: $font_size_title_tagline + 1;
