Thinner and lighter blockquote bar

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -146,7 +146,7 @@ blockquote {
     font-size: $font_size_default;
     font-style: italic;
     color: $color_text_highlight;
-    border-left: 6px solid $color_text_highlight - 20;
+    border-left: 4px solid $color_blockquote;
     margin-left: 17px;
     margin-top: 12px;
     margin-bottom: 12px;
