--- a/_includes/page_left_sidebar.html
+++ b/_includes/page_left_sidebar.html
@@ -17,7 +17,7 @@
             {% for post in site.categories['newsbit'] limit:20 %}
                 {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
                     {% assign newsbit_content = post.content | remove: '<p>' | remove: '</p>'%}
-                    {% if post.publish and newsbit_content != "" %}
+                    {% if newsbit_content != "" %}
                     <div class="newsbit">
                         <p class="date">
                             {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
