--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -1,4 +1,6 @@
 <div id="related_posts">
+    <h1>Related Posts</h1>
+    <ul>
     {% capture nowday  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
     {% capture nowyear %}{{ 'now' | date: '%Y' }}{% endcapture %}
     <!-- The following code snippet was taken from http://zhangwenli.com -->
@@ -9,10 +11,6 @@
         {% for tag in post.tags %}
             {% for thisTag in page.tags %}
                 {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
-                    {% if hasSimilar.size == 0 %}
-                        <h1>Related Posts</h1>
-                        <ul>
-                    {% endif %}
                     <li>
                         <!--
                         {% if post.date == nil %}
@@ -53,4 +51,8 @@
             {% endfor %}
         {% endfor %}
     {% endfor %}
+    {% if hasSimilar.size == 0 %}
+        <li><h2>No related posts</h2></li>
+    {% endif %}
+    </ul>
 </div>
