--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -16,8 +16,8 @@
 $font_serif:                "Liberation Serif", Garamond, Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
 $font_serif_thin:           "Liberation Serif", Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
 
-$font_sans:                 "Roboto", Helvetica, Arial, sans-serif;
-$font_sans_thin:            "Lato", Helvetica, "Lucida Sans", Arial, sans-serif;
+$font_sans:                 "Lato", Helvetica, "Lucida Sans", Arial, sans-serif;
+$font_sans_thin:            "Roboto", Helvetica, Arial, sans-serif;
 
 $font_monospace:            Consolas, Bitstream Vera Sans Mono, Lucida Console, "Courier New", "Courier", Terminal, monospace;
 
@@ -46,6 +46,13 @@ $font_size_code_in_text:    14px;
 $font_size_table_heading:   $font_size_default;
 $font_size_table_data:      $font_size_default;
 
+// Block Quote
+$font_blockquote:               $font_sans_thin;
+$font_size_blockquote:          15px;
+$font_line_height_blockquote:   $font_size_blockquote + 4;
+$word_spacing_blockquote:       0.1em;
+
+
 // Add whitespace between words
 // Normal whitespace between is 0.25em
 $word_spacing:              0.155em;
@@ -70,13 +77,13 @@ $font_announcement_date:        $font_label;
 $font_size_announcement_date:   $font_size_label - 2;
 $font_announcement_text:        $font_serif_thin;
 
-// Page
+// Page and Post
 $font_page_title:               $font_heading;
 $font_size_page_title:          $font_size_heading;
 $font_line_height_page_title:   $font_size_heading;
 $font_page_text:                $font_default;
 $font_size_page_text:           $font_size_default + 3;
-$font_line_height_page_text:    $font_line_height_default + 4;
+$font_line_height_page_text:    $font_line_height_default + 8;
 $font_page_meta:                $font_page_text;
 $font_size_page_meta:           $font_size_default;
 $font_line_height_page_meta:    $font_size_default + 4;
@@ -112,7 +119,7 @@ $font_related_post_excerpt:         $font_serif_thin;
 $font_size_related_post_excerpt:    13px;
 
 // Quote
-$font_quote:                $font_sans;
+$font_quote:                $font_sans_thin;
 $font_size_quote:           13px;
 $font_line_height_quote:    $font_size_quote + 4;
 $font_quote_author:         $font_serif_thin;
@@ -128,5 +135,5 @@ $font_size_footer:          13px;
 $font_size_license:         13px;
 
 // Link buttons
-$font_button:               $font_sans_thin;
+$font_button:               $font_sans;
 $font_size_button:          13px;
