Add twitter card meta info

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,8 +21,14 @@
     <meta name="description" content="News" />
 	<meta name="keywords" content="news duterte" />
 	<meta name="robots" content="index, follow" />
-    
     <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon/duterte_times.png">
+    
+    <!-- Twitter card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@dutertetimes" />
+    <meta name="twitter:title" content="{{ page.title }}" />
+    <meta name="twitter:description" content="{{ page.excerpt }}" />
+    <meta name="twitter:image" content="{{ site.baseurl }}/images/favicon/duterte_times.png" />
 
     <!-- Stylesheets -->
     <!------------------------------------------------------------------------>
