No twitter:image value

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,7 @@
     <meta name="twitter:site" content="@dutertetimes" />
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{{ page.excerpt }}" />
-    <meta name="twitter:image" content="{{ site.baseurl }}/images/favicon/duterte_times.png" />
+    <meta name="twitter:image" content="" />
 
     <!-- Stylesheets -->
     <!------------------------------------------------------------------------>
