--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1186,6 +1186,7 @@ section.column_right_sidebar {
                     a {
                         font-family: $font_related_post_title;
                         font-size: $font_size_related_post_title;
+                        font-weight: bold;
                         line-height: $font_size_related_post_title;
                     }
                 }
