--- a/_includes/post_left_sidebar.html
+++ b/_includes/post_left_sidebar.html
@@ -1,4 +1,6 @@
 <section class="column_left_sidebar">
+    {% include datetime.html %}
+
     <div id="nav_left">
         {% include common_menu.html %}
     </div>
