--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,9 @@
 <head>
     {% seo %}
+    
+    {% if page.categories == 'post' %}
     {% feed_meta %}
+    {% endif %}
     
     {% if page.title == "Home" %}
         <title>{{ site.title }}</title>
