Add last update info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,8 +21,9 @@
             <p>
                 Powered by <a href="http://jekyllrb.com" title="Jekyll" target="_blank">Jekyll</a> <br/>
                 Hosted by <a href="http://github.com" title="GitHub" target="_blank">Github</a> <br/>
-                Redesigned based on Theme by <a href="https://twitter.com/michigangraham" target="_blank">mattgraham</a> <br/>
-                04 November 2014
+                Based on Theme by <a href="https://twitter.com/michigangraham" target="_blank">mattgraham</a> <br/>
+                Redesigned 04 November 2014<br/>
+                Last updated on {{ site.time }}
             </p>
         </div>
 
