--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,7 @@
     {% if page.image %}
     <meta name="twitter:image:src" content="{{ site.url }}{{ page.image }}" />
     {% else %}
-    <meta name="twitter:image:src" content="{{ site.url }}{{ site.author.icon }}" />
+    <meta name="twitter:image:src" content="{{ site.url }}/images/favicon/{{ site.author.icon }}" />
     {% endif %}
 
     <!-- Stylesheets -->
