--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -579,6 +579,7 @@ section.column_left_sidebar {
         background: $color_sidebar_bg;
 
         div.newsbit {
+            margin-right: 5px;
             h2 {
                 font-family: $font_news_title;
                 font-size: $font_size_news_title;
