--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,11 +10,20 @@
         </div>
 
         <div id="footer_column_two">
-            <div>&nbsp;</div>
+            <ul>
+                <li><a href="">National</a></li>
+                <li><a href="">Business</a></li>
+                <li><a href="">Peace and Order</a></li>
+                <li><a href="">Science and Technology</a></li>
+                <li><a href="">Opinion</a></li>
+            </ul>
         </div>
 
         <div id="footer_column_three">
-            <div>&nbsp;</div>
+            <ul>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
         </div>
 
         <div id="footer_column_four" class="license">
